tests/ui/imports/ambiguous-6.stderr
error[E0659]: `C` is ambiguous
  --> $DIR/ambiguous-6.rs:6:5
   |
LL |     C
   |     ^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `C` could refer to the constant imported here
  --> $DIR/ambiguous-6.rs:14:13
   |
LL |     pub use mod1::*;
   |             ^^^^^^^
   = help: consider adding an explicit import of `C` to disambiguate
note: `C` could also refer to the constant imported here
  --> $DIR/ambiguous-6.rs:15:13
   |
LL |     pub use mod2::*;
   |             ^^^^^^^
   = help: consider adding an explicit import of `C` to disambiguate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
